持续优化中

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Nice-Wanandroid</string>
+    <string name="drawer_layout_content_description">主页侧边栏描述</string>
 </resources>
